[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sasnet"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Adam Amer", email = "136176500+adamamer20@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "datasets",
  "pandas",
  "polars",
  "pulp",
  "scikit-learn"
]

[project.urls]
Documentation = "https://github.com/adamamer20/sasnet#readme"
Issues = "https://github.com/adamamer20/sasnet/issues"
Source = "https://github.com/adamamer20/sasnet"

[tool.hatch.version]
path = "src/sasnet/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/sasnet tests}"

[tool.coverage.run]
source_pkgs = ["sasnet", "tests"]
branch = true
parallel = true
omit = [
  "src/sasnet/__about__.py",
]

[tool.coverage.paths]
sasnet = ["src/sasnet", "*/sasnet/src/sasnet"]
tests = ["tests", "*/sasnet/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
